--- a/nx.json
+++ b/nx.json
@@ -33,7 +33,8 @@
     "sharedGlobals": []
   },
   "workspaceLayout": {
-    "appsDir": "packages",
+    "appsDir": "apps",
     "libsDir": "packages"
-  }
+  },
+  "defaultProject": "test"
 }
