--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@arql/contextualiser": ["packages/contextualiser/src/index.ts"],
+      "@arql/core": ["packages/core/src/index.ts"],
       "@arql/models": ["packages/models/src/index.ts"],
       "@arql/operators": ["packages/operators/src/index.ts"],
       "@arql/parser": ["packages/parser/src/index.ts"],
