feat: use ESM and add initial postgresql source

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,6 +6,7 @@
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es2015",
@@ -21,6 +22,7 @@
       "@arql/models": ["packages/models/src/index.ts"],
       "@arql/operators": ["packages/operators/src/index.ts"],
       "@arql/parser": ["packages/parser/src/index.ts"],
+      "@arql/source-postgresql": ["packages/source-postgresql/src/index.ts"],
       "@arql/sources": ["packages/sources/src/index.ts"],
       "@arql/util": ["packages/util/src/index.ts"]
     }
