--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
+  "type": "module",
   "dependencies": {
-    "arcsecond": "^5.0.0"
+    "arcsecond": "^5.0.0",
+    "lodash": "^4.17.21",
+    "sql-ts": "^6.2.0",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@nrwl/cli": "15.0.0",
@@ -16,6 +20,7 @@
     "@nrwl/node": "15.0.0",
     "@nrwl/workspace": "15.0.0",
     "@types/jest": "28.1.1",
+    "@types/lodash": "^4.14.186",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
@@ -25,10 +30,13 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "nx": "15.0.0",
+    "nx-ts-esm-loader": "0.0.3",
     "prettier": "^2.6.2",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "~4.8.2"
+    "tsconfig-paths": "^4.1.0",
+    "typescript": "~4.8.2",
+    "webpack-node-externals": "^3.0.0"
   }
 }
