--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,6 +23,7 @@
       "@arql/models": ["packages/models/src/index.ts"],
       "@arql/operators": ["packages/operators/src/index.ts"],
       "@arql/parser": ["packages/parser/src/index.ts"],
+      "@arql/source-js": ["packages/source-js/src/index.ts"],
       "@arql/source-postgresql": ["packages/source-postgresql/src/index.ts"],
       "@arql/util": ["packages/util/src/index.ts"]
     }
