--- a/package.json
+++ b/package.json
@@ -6,23 +6,31 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
+    "@nrwl/nest": "^15.0.8",
     "arcsecond": "^5.0.0",
     "lodash": "^4.17.21",
     "pg": "^8.8.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.0.0",
     "sql-ts": "^6.2.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
     "@nrwl/cli": "15.0.5",
     "@nrwl/eslint-plugin-nx": "15.0.5",
-    "@nrwl/jest": "15.0.5",
+    "@nrwl/jest": "15.0.8",
     "@nrwl/js": "15.0.5",
     "@nrwl/linter": "15.0.5",
-    "@nrwl/node": "15.0.5",
+    "@nrwl/node": "^15.0.8",
     "@nrwl/workspace": "15.0.5",
     "@types/jest": "28.1.1",
     "@types/lodash": "^4.14.186",
-    "@types/node": "16.11.7",
+    "@types/node": "18.7.1",
     "@types/pg": "^8.6.5",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
