--- a/package.json
+++ b/package.json
@@ -6,42 +6,67 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.12",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nrwl/nest": "^15.0.8",
+    "@tanstack/react-query": "^4.14.1",
     "arcsecond": "^5.0.0",
+    "core-js": "^3.6.5",
     "lodash": "^4.17.21",
     "pg": "^8.8.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.4.1",
     "reflect-metadata": "^0.1.13",
+    "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
     "sql-ts": "^6.2.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "11.10.2",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@nrwl/cli": "15.0.5",
+    "@nrwl/cypress": "15.0.8",
     "@nrwl/eslint-plugin-nx": "15.0.5",
     "@nrwl/jest": "15.0.8",
     "@nrwl/js": "15.0.5",
     "@nrwl/linter": "15.0.5",
     "@nrwl/node": "^15.0.8",
+    "@nrwl/react": "15.0.8",
+    "@nrwl/web": "15.0.8",
     "@nrwl/workspace": "15.0.5",
+    "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
     "@types/lodash": "^4.14.186",
-    "@types/node": "18.7.1",
+    "@types/node": "18.7.18",
     "@types/pg": "^8.6.5",
+    "@types/react": "18.0.20",
+    "@types/react-dom": "18.0.6",
+    "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "@webundsoehne/nx-builders": "^6.0.1",
+    "babel-jest": "28.1.1",
+    "cypress": "^10.7.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.8",
+    "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "nx": "15.0.5",
     "nx-ts-esm-loader": "0.0.3",
     "prettier": "^2.6.2",
+    "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "ts-node-dev": "^2.0.0",
