--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/testing": "^9.0.0",
     "@nrwl/cli": "15.0.5",
     "@nrwl/cypress": "15.0.8",
+    "@nrwl/esbuild": "^15.0.13",
     "@nrwl/eslint-plugin-nx": "15.0.5",
     "@nrwl/jest": "15.0.8",
     "@nrwl/js": "15.0.5",
@@ -56,6 +57,7 @@
     "@webundsoehne/nx-builders": "^6.0.1",
     "babel-jest": "28.1.1",
     "cypress": "^10.7.0",
+    "esbuild": "^0.15.13",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
