--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "arql",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "build": "npx nx run-many --target=build",
+    "test": "npx nx run-many --target=test"
+  },
   "private": true,
   "type": "module",
   "dependencies": {
