--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nrwl/nest": "^15.0.8",
     "@tanstack/react-query": "^4.14.1",
+    "@types/mongodb": "^4.0.7",
     "arcsecond": "^5.0.0",
     "core-js": "^3.6.5",
     "lodash": "^4.17.21",
+    "mongodb": "^4.11.0",
     "pg": "^8.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
