--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,10 +23,12 @@
       "@arql/models": ["packages/models/src/index.ts"],
       "@arql/parser": ["packages/parser/src/index.ts"],
       "@arql/source-js": ["packages/source-js/src/index.ts"],
+      "@arql/source-mongodb": ["packages/source-mongodb/src/index.ts"],
       "@arql/source-postgresql": ["packages/source-postgresql/src/index.ts"],
       "@arql/stdlib-collector": ["packages/stdlib-collector/src/index.ts"],
       "@arql/stdlib-definitions": ["packages/stdlib-definitions/src/index.ts"],
       "@arql/stdlib-js": ["packages/stdlib-js/src/index.ts"],
+      "@arql/stdlib-mongodb": ["packages/stdlib-mongodb/src/index.ts"],
       "@arql/stdlib-postgresql": ["packages/stdlib-postgresql/src/index.ts"],
       "@arql/types": ["packages/types/src/index.ts"],
       "@arql/util": ["packages/util/src/index.ts"]
